--- a/src/styles/painting-details.module.css
+++ b/src/styles/painting-details.module.css
@@ -1,34 +1,61 @@
 .layout {
-    margin: 1.5em;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    width: 327px;
-}
-.thumbnail {
-    position: relative;
-    max-width: 327px;
-    margin-bottom: 3.375em;
-}
-.headerText {
-    position: absolute;
-    background-color: #ffffff;
-    color: #000000;
-    left: 0;
-    top: 200px;
-    width: 85%;
+    min-width: 340px;
     padding: 1.5em;
 }
-.headerText > h1 {
+.hero__section {
+    position: relative;
+    margin-bottom: 11em;
+}
+.hero__subdetails{
+    /* border: 2px solid magenta; */
+    width: 85%;
+    position: absolute;
+    top: 70%;
+}
+.hero__small {
+    display: block;
+}
+.hero__large {
+    display: none;
+}
+.hero__view {
+    background: rgba(0, 0, 0, 0.75);
+    position: absolute;
+    top: 1em;
+    left: 1em;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 152px;
+    cursor: pointer;
+}
+.hero__view img {
+    width: 12px;
+    height: 12px;
+}
+.hero__view p {
+    font-size: 0.625rem;
+    color: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+.hero__text {
+    background-color: #ffffff;
+    color: #000000;
+    padding: 1.5em;
+}
+.hero__text > h1 {
     font-size: 1.5rem;
     margin: 0;
 }
-.headerText > h2 {
+.hero__text > h2 {
     font-size: 1rem;
     color: #7D7D7D;
 }
-.artistImg {
-    margin-bottom: 3.375em;
+.hero__artist {
     width: 64px;
 }
 
@@ -45,18 +72,133 @@
     color: #F3F3F3;
     right: 0;
     top: -175px;
-    z-index: -2;
+    z-index: -10;
 }
-.details > div {
+.details__text > div {
     font-size: 0.875rem; 
     line-height: 28px;
     color: #7D7D7D;
     margin-bottom: 2.85em;
 }
-.details > a {
+.details__text > a {
     font-size: 0.5625rem; 
     letter-spacing: 2px;
     color: #7D7D7D;
-    text-transform: uppercase;
-    
+    text-transform: uppercase; 
+}
+
+@media (min-width: 500px) {
+    .hero__section {
+        position: relative;
+        margin-bottom: 9em;
+    }
+    .hero__subdetails {
+        width: 70%;
+    }
+    .hero__text > h1 {
+        font-size: 2.2rem;
+    }
+    .details > h3 {
+        font-size: 9rem;
+        top: -250px;
+    }
+}
+
+@media (min-width: 750px) {
+    /* Typography */
+    .hero__text {
+        margin: 0;
+        padding: 0 1em 3.5em 3.5em;
+        width: 90%;
+    }
+    .hero__text > h1 {
+        font-size: 3.5rem;
+    }
+    .details > h3 {
+        font-size: 12.5rem;
+        left: 0;
+        top: -300px;
+    }
+    .hero__artist{
+        width: 128px;
+        margin-right: 10%;
+    }
+
+    /* Layout */
+    .layout {
+        max-width: 870px;
+    }
+    .hero__section {
+        margin-bottom: 8.7em;
+    }
+    .hero__small {
+        display: none;
+    }
+    .hero__large {
+        display: block;
+        max-width: 550px;
+        width: 70%;
+    }
+    .hero__view {
+       bottom: 1em; 
+       top:auto;
+    }
+    .hero__subdetails{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        top: 0;
+        right: 0;
+    }
+    .details {
+        width: 90%;
+        margin-bottom: 3.3em;
+    }
+    .details > div {
+        padding-left: 11em;
+    }
+}
+
+@media (min-width: 1250px) {
+    .layout {
+        width: 100%;
+        max-width: 1500px;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 6.25em;
+    }
+    .hero__section {
+        width: 790px;
+    }
+    .hero__large {
+        width: 100%;
+        max-width: 475px;
+    }
+    .hero__subdetails {
+        height: 624px;
+        max-width: 380px;
+        justify-content: space-between;
+        align-items: flex-end;  
+    }
+    .hero__text {
+        padding-right: 0;
+        width: 100%;
+    }
+    .hero__artist{
+        margin-right: 9em;
+    }
+    .details {
+        max-width: 475px;
+        margin-top: 7em;
+    }
+    .details > div {
+        padding-left: 0;
+        max-width: 21.9em;
+    }
+    .details > h3 {
+        top: -350px;
+    }
+    .details__text > div {
+        margin-bottom: 10em;
+    }
 }
