added functionality to view paintings as overlays

--- a/src/styles/painting-details.module.css
+++ b/src/styles/painting-details.module.css
@@ -1,4 +1,5 @@
 .layout {
+    position: relative;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -22,6 +23,12 @@
     display: none;
 }
 .hero__view {
+    font-family: 'Libre Baskerville';
+    font-weight: 700;
+    font-size: 0.625rem;
+    color: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 2.14px;
     background: rgba(0, 0, 0, 0.75);
     position: absolute;
     top: 1em;
@@ -29,18 +36,13 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 152px;
+    padding: 1.4em 0;
+    width: 15.2em;
     cursor: pointer;
 }
 .hero__view img {
     width: 12px;
     height: 12px;
-}
-.hero__view p {
-    font-size: 0.625rem;
-    color: #ffffff;
-    text-transform: uppercase;
-    letter-spacing: 2px;
 }
 .hero__text {
     background-color: #ffffff;
@@ -86,6 +88,53 @@
     color: #7D7D7D;
     text-transform: uppercase; 
 }
+
+/* Overlay */
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.85);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 10;
+    padding: 0 1.5em;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
+.overlay__main {
+    position: relative;
+    width: 100%;
+}
+.overlay__imageSmall {
+    display: block;
+}
+.overlay__imageLarge {
+    display: none;
+}
+.overlay__button {
+    position: absolute;
+    font-family: 'Libre Baskerville';
+    font-size: 0.625rem;
+    font-weight: 700;
+    color: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    background: none;
+    border: none;
+    width: 4.25em;
+    cursor: pointer;
+    top: -33px;
+    right: 14px;
+}
+
+/* Media Queries */
 
 @media (min-width: 500px) {
     .hero__section {
@@ -157,6 +206,9 @@
     .details > div {
         padding-left: 11em;
     }
+    .overlay__main {
+        max-width: 670px;
+    }
 }
 
 @media (min-width: 1250px) {
@@ -200,5 +252,14 @@
     }
     .details__text > div {
         margin-bottom: 10em;
+    }
+    .overlay__main {
+        max-height: 770px;
+    }
+    .overlay__imageSmall {
+        display: none;
+    }
+    .overlay__imageLarge {
+        display: block;
     }
 }
