added pagination to next and back buttons

--- a/src/styles/directions.module.css
+++ b/src/styles/directions.module.css
@@ -23,7 +23,8 @@
     justify-content: space-between;
     width: 56px;
 }
-.images > img {
+.backButton, 
+.nextButton {
     width: 17px;
     height: 17px;
 }
