--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,8 @@ nav {
 nav > h2 {
     margin: 0;
 }
-nav > h3 {
+button {
+    font-family: 'Libre Baskerville';
     color: #7D7D7D;
     text-transform: uppercase;
     letter-spacing: 1.93px;
@@ -26,11 +27,13 @@ nav > h3 {
     font-weight: 700;
     margin: 0;
     cursor: pointer;
+    border: none;
+    background: none;
 }
 
-nav > h3:hover,
-nav > h3:focus {
-    border-bottom: 1px solid #7D7D7D;
+button:hover,
+button:focus {
+    color: #000000;
 }
 
 img {
@@ -49,7 +52,7 @@ img {
 
 @media (min-width: 770px){
     nav {
-        padding: 3.5em 2.5em;
+        padding: 2.5em;
     }
     img {
         width: 169px;
